initialize 동작에서 테넌트 ID가 설정되어 있지 않으면 렐름을 이용하여 테넌트 ID를 구하도록 수정 UserRole 테이블에서 rId 를 사용하는 문제점 수정
