# docs/swagger.yaml
@@ -32,13 +32,6 @@ definitions:
     - id
     - name
     type: object
-  models.AutuhorityUse:
-    properties:
-      useYn:
-        type: boolean
-    required:
-    - useYn
-    type: object
   models.ClientSecret:
     properties:
       type:
@@ -1275,49 +1268,6 @@ paths:
       security:
       - Bearer: []
       summary: 역할 권한 수정
-      tags:
-      - Authority
-  /authority/user/{tenantId}/{userId}/roles/{roleId}:
-    put:
-      parameters:
-      - description: Realm Id
-        in: path
-        name: realm
-        required: true
-        type: string
-      - description: User Id
-        in: path
-        name: userId
-        required: true
-        type: string
-      - description: Role Id
-        in: path
-        name: roleId
-        required: true
-        type: string
-      - description: tenantId
-        in: path
-        name: tenantId
-        required: true
-        type: string
-      - description: AutuhorityUse Yn
-        in: body
-        name: autuhorityUse
-        required: true
-        schema:
-          $ref: '#/definitions/models.AutuhorityUse'
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: No Content
-        "400":
-          description: Bad Request
-        "500":
-          description: Internal Server Error
-      security:
-      - Bearer: []
-      summary: 유저 역할 수정 (현재 사용되지 않음)
       tags:
       - Authority
   /authority/user/{userId}:
